ADD_SUBDIRECTORY(framework)
ADD_SUBDIRECTORY(hal)
ADD_SUBDIRECTORY(phy)
ADD_SUBDIRECTORY(dll)
ADD_SUBDIRECTORY(trans)
ADD_SUBDIRECTORY(nwl)

ADD_LIBRARY(D7AOSS d7aoss.h)
SET_TARGET_PROPERTIES(D7AOSS PROPERTIES LINKER_LANGUAGE C)
TARGET_LINK_LIBRARIES(D7AOSS FRAMEWORK HAL DLL PHY) #TODO find a way to conditionally link DRV

