SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(alp)
ADD_SUBDIRECTORY(dae)
ADD_SUBDIRECTORY(dll)
ADD_SUBDIRECTORY(framework)
ADD_SUBDIRECTORY(hal)
ADD_SUBDIRECTORY(nwl)
ADD_SUBDIRECTORY(phy)
ADD_SUBDIRECTORY(trans)

ADD_LIBRARY(D7AOSS d7aoss.c)
SET_TARGET_PROPERTIES(D7AOSS PROPERTIES LINKER_LANGUAGE C)
TARGET_LINK_LIBRARIES(D7AOSS ALP DAE DLL FRAMEWORK HAL NWL PHY TRANS)

