SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(alp)
ADD_SUBDIRECTORY(dae)
ADD_SUBDIRECTORY(dll)
ADD_SUBDIRECTORY(framework)
ADD_SUBDIRECTORY(hal)
ADD_SUBDIRECTORY(nwl)
ADD_SUBDIRECTORY(phy)
ADD_SUBDIRECTORY(trans)

ADD_LIBRARY(D7AOSS OBJECT d7aoss.c)

ADD_LIBRARY(OSS7STACK 
	$<TARGET_OBJECTS:D7AOSS> 
	$<TARGET_OBJECTS:ALP> 
	$<TARGET_OBJECTS:DAE>
	$<TARGET_OBJECTS:PHY> 
	$<TARGET_OBJECTS:HAL>
	$<TARGET_OBJECTS:FRAMEWORK>
	$<TARGET_OBJECTS:DLL>
	$<TARGET_OBJECTS:NWL>
	$<TARGET_OBJECTS:TRANS>
)
