ADD_SUBDIRECTORY(phy_test)
ADD_SUBDIRECTORY(mac_test)
ADD_SUBDIRECTORY(trans_test)
ADD_SUBDIRECTORY(nwl_test)
ADD_SUBDIRECTORY(pdr_test)
ADD_SUBDIRECTORY(nwl_rx_test)
ADD_SUBDIRECTORY(timing_test)
ADD_SUBDIRECTORY(star_push_gateway_example)
ADD_SUBDIRECTORY(star_push_endpoint_example)
ADD_SUBDIRECTORY(datastream_uart_example)