INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/framework)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/hal)
INCLUDE_DIRECTORIES(${D7AOSS_SOURCE_DIR}/d7aoss/dll)

ADD_EXECUTABLE(star_push_endpoint_example main.c filesystem.c)
TARGET_LINK_LIBRARIES(star_push_endpoint_example D7AOSS ALP DAE PHY HAL FRAMEWORK DLL NWL TRANS)

IF(D7AOSS_HAL_DRIVER STREQUAL "efm32gg")
SET_TARGET_PROPERTIES(star_push_endpoint_example PROPERTIES LINK_FLAGS "-T${D7AOSS_SOURCE_DIR}/d7aoss/hal/efm32gg/CMSIS/device/linker/efm32gg.ld")
ENDIF()

